--- a/client/src/pages/css/course.module.css
+++ b/client/src/pages/css/course.module.css
@@ -38,4 +38,5 @@
 
 .image {
   height: 35rem;
+  object-fit: cover;
 }
